--- a/QuanLyDaiLy/QLDaiLyBUS/QLDaiLyBUS.vbproj
+++ b/QuanLyDaiLy/QLDaiLyBUS/QLDaiLyBUS.vbproj
@@ -81,6 +81,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="QuanBUS.vb" />
+    <Compile Include="ThamSoBUS.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
