--- a/QuanLyDaiLy/QLDaiLyDAL/QLDaiLyDAL.vbproj
+++ b/QuanLyDaiLy/QLDaiLyDAL/QLDaiLyDAL.vbproj
@@ -82,6 +82,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="QuanDAL.vb" />
+    <Compile Include="ThamSoDAL.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
