--- a/QuanLyDaiLy/QLDaiLyGUI/QLDaiLyGUI.vbproj
+++ b/QuanLyDaiLy/QLDaiLyGUI/QLDaiLyGUI.vbproj
@@ -80,6 +80,12 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmThamSo.Designer.vb">
+      <DependentUpon>frmThamSo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmThamSo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmThemDaiLy.Designer.vb">
       <DependentUpon>frmThemDaiLy.vb</DependentUpon>
     </Compile>
@@ -105,6 +111,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmThamSo.resx">
+      <DependentUpon>frmThamSo.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmThemDaiLy.resx">
       <DependentUpon>frmThemDaiLy.vb</DependentUpon>
