--- a/QuanLyDaiLy/DaiLyDTO/QLDaiLyDTO.vbproj
+++ b/QuanLyDaiLy/DaiLyDTO/QLDaiLyDTO.vbproj
@@ -62,8 +62,13 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaoCaoCongNo.vb" />
+    <Compile Include="BaoCaoDoanhSoDTO.vb" />
+    <Compile Include="ChiTietPhieuXuatDTO.vb" />
     <Compile Include="DaiLyDTO.vb" />
+    <Compile Include="DonViTinhDTO.vb" />
     <Compile Include="LoaiDLDTO.vb" />
+    <Compile Include="MatHangDTO.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -79,6 +84,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PhieuThuTienDTO.vb" />
+    <Compile Include="PhieuXuatDTO.vb" />
     <Compile Include="QuanDTO.vb" />
     <Compile Include="ThamSoDTO.vb" />
   </ItemGroup>
