--- a/QuanLyDaiLy/QLDaiLyBUS/QLDaiLyBUS.vbproj
+++ b/QuanLyDaiLy/QLDaiLyBUS/QLDaiLyBUS.vbproj
@@ -62,6 +62,8 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaoCaoCongNoBUS.vb" />
+    <Compile Include="BaoCaoDoanhSoBUS.vb" />
     <Compile Include="ChiTietPhieuXuatBUS.vb" />
     <Compile Include="Class1.vb" />
     <Compile Include="DaiLyBUS.vb" />
@@ -83,6 +85,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PhieuThuTienBUS.vb" />
     <Compile Include="PhieuXuatBUS.vb" />
     <Compile Include="QuanBUS.vb" />
     <Compile Include="ThamSoBUS.vb" />
