--- a/QuanLyDaiLy/QLDaiLyDAL/QLDaiLyDAL.vbproj
+++ b/QuanLyDaiLy/QLDaiLyDAL/QLDaiLyDAL.vbproj
@@ -63,6 +63,8 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaoCaoCongNoDAL.vb" />
+    <Compile Include="BaoCaoDoanhSoDAL.vb" />
     <Compile Include="ChiTietPhieuXuatDAL.vb" />
     <Compile Include="Class1.vb" />
     <Compile Include="DaiLyDAL.vb" />
@@ -84,6 +86,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PhieuThuTienDAL.vb" />
     <Compile Include="PhieuXuatDAL.vb" />
     <Compile Include="QuanDAL.vb" />
     <Compile Include="ThamSoDAL.vb" />
