--- a/QuanLyDaiLy/QLDaiLyGUI/QLDaiLyGUI.vbproj
+++ b/QuanLyDaiLy/QLDaiLyGUI/QLDaiLyGUI.vbproj
@@ -122,10 +122,10 @@
     <Compile Include="frmQLLoaiDLvb.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmQLMatHang.Designer.vb">
-      <DependentUpon>frmQLMatHang.vb</DependentUpon>
+    <Compile Include="frmQLLoaiXe.Designer.vb">
+      <DependentUpon>frmQLLoaiXe.vb</DependentUpon>
     </Compile>
-    <Compile Include="frmQLMatHang.vb">
+    <Compile Include="frmQLLoaiXe.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmQLPhieuThuTien.Designer.vb">
@@ -182,10 +182,10 @@
     <Compile Include="frmThemLoaiDL.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmThemMatHang.Designer.vb">
-      <DependentUpon>frmThemMatHang.vb</DependentUpon>
+    <Compile Include="frmThemLoaiXe.Designer.vb">
+      <DependentUpon>frmThemLoaiXe.vb</DependentUpon>
     </Compile>
-    <Compile Include="frmThemMatHang.vb">
+    <Compile Include="frmThemLoaiXe.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmThemPhieuThuTien.Designer.vb">
@@ -247,8 +247,8 @@
     <EmbeddedResource Include="frmQLLoaiDLvb.resx">
       <DependentUpon>frmQLLoaiDLvb.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmQLMatHang.resx">
-      <DependentUpon>frmQLMatHang.vb</DependentUpon>
+    <EmbeddedResource Include="frmQLLoaiXe.resx">
+      <DependentUpon>frmQLLoaiXe.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmQLPhieuThuTien.resx">
       <DependentUpon>frmQLPhieuThuTien.vb</DependentUpon>
@@ -277,8 +277,8 @@
     <EmbeddedResource Include="frmThemLoaiDL.resx">
       <DependentUpon>frmThemLoaiDL.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmThemMatHang.resx">
-      <DependentUpon>frmThemMatHang.vb</DependentUpon>
+    <EmbeddedResource Include="frmThemLoaiXe.resx">
+      <DependentUpon>frmThemLoaiXe.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmThemPhieuThuTien.resx">
       <DependentUpon>frmThemPhieuThuTien.vb</DependentUpon>
