--- a/QuanLyDaiLy/QLDaiLyBUS/QLDaiLyBUS.vbproj
+++ b/QuanLyDaiLy/QLDaiLyBUS/QLDaiLyBUS.vbproj
@@ -69,7 +69,7 @@
     <Compile Include="DaiLyBUS.vb" />
     <Compile Include="DonViTinhBUS.vb" />
     <Compile Include="LoaiDLBUS.vb" />
-    <Compile Include="MatHangBUS.vb" />
+    <Compile Include="LoaiXeBUS.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
